# ArborDoc

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_0.docx  demo_sample.docx  package-lock.json  pyproject.toml  计划书
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_demo_phase1/: result.docx  result_fresh.docx  sample_source.docx  sample_template.docx  tree.json
docs/: SUBMISSION.md
examples/: README.md
src/arbordoc/: __init__.py  cli.py
src/arbordoc/api/: __init__.py  app.py  routes.py
src/arbordoc/api/static/: index.html
src/arbordoc/api/templates/: academic.docx  business.docx  minimal.docx
src/arbordoc/assist/: __init__.py  config.py  llm.py  pipeline.py  review.py  schema.py
src/arbordoc/converters/: base.py  latex.py
src/arbordoc/core/: __init__.py  extractor.py  parser.py  styler.py  tree.py
src/arbordoc/models/: __init__.py  schema.py
src/arbordoc/utils/: __init__.py
tests/: conftest.py  test_api.py  test_assist.py  test_cli.py  test_extractor_assets.py  test_formatting.py  test_headers_footers.py  test_latex_exporter.py  test_lists.py  test_parser.py  test_schema.py  test_styler.py
tests/fixtures/: README.md
