[tool.poetry]
name = "arbordoc"
version = "0.1.0"
description = "Structured DOCX parsing and transformation toolkit."
authors = ["Ma PingChuan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Malibugirl3/ArborDoc"
homepage = "https://github.com/Malibugirl3/ArborDoc"
packages = [{ include = "arbordoc", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-docx = "*"
lxml = "*"
pydantic = ">=2,<3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
httpx = "*"

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "python-multipart"]

[tool.poetry.scripts]
arbordoc = "arbordoc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
